--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     {
       "radio_name": "Your Single Radio",
       "radio_genre": "Pop",
-      "radio_url": "	http://46.252.154.133:8080",
+      "radio_url": "	http://stream.zeno.fm/2dmgztdg1c9uv",
       "radio_image_url": "https://i.ibb.co/RQqggB6/radio-image.png",
       "background_image_url": "https://i.pinimg.com/originals/9b/2f/cf/9b2fcfc4838dbcbe8b97e2e038789e6b.gif"
     }
