--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "radio": [
     {
-      "radio_name": "Your Single Radio",
+      "radio_name": "Super Radio Ohrid 97.00 FM",
       "radio_genre": "Pop",
       "radio_url": "	http://stream.zeno.fm/2dmgztdg1c9uv",
       "radio_image_url": "https://i.ibb.co/RQqggB6/radio-image.png",
