--- a/config.json
+++ b/config.json
@@ -36,29 +36,29 @@
   ],
   "socials": [
     {
-      "social_name": "Website1",
+      "social_name": "Super Radio",
       "social_icon": "https://image.flaticon.com/icons/png/512/61/61027.png",
       "social_url": "https://solodroid.net/demo/your_single_radio/page.html"
     },
 	{
-      "social_name": "Website2",
+      "social_name": "OhridPress",
       "social_icon": "https://image.flaticon.com/icons/png/512/61/61027.png",
-      "social_url": "https://solodroid.net/demo/your_single_radio/page.html"
+      "social_url": "https://ohridpress.com.mk"
     },
     {
-      "social_name": "Website3",
-      "social_icon": "https://image.flaticon.com/icons/png/512/61/61045.png",
-      "social_url": "https://www.facebook.com/solodroid.net"
+      "social_name": "Inpress",
+      "social_icon": "https://image.flaticon.com/icons/png/512/61/61027.png",
+      "social_url": "https://ipress.com.mk"
     },
     {
       "social_name": "Facebook",
-      "social_icon": "https://image.flaticon.com/icons/png/512/60/60580.png",
-      "social_url": "https://twitter.com/solodroiddev"
+      "social_icon": "https://image.flaticon.com/icons/png/512/61/61045.png",
+      "social_url": "https://www.facebook.com/superradio97fm"
     },
     {
       "social_name": "Instagram",
       "social_icon": "https://image.flaticon.com/icons/png/512/61/61164.png",
-      "social_url": "https://www.instagram.com/solodroid.developer"
+      "social_url": "https://www.instagram.com/superradio97fm"
     }
   ]
 }
