--- a/config.json
+++ b/config.json
@@ -38,7 +38,7 @@
     {
       "social_name": "Super Radio",
       "social_icon": "https://image.flaticon.com/icons/png/512/61/61027.png",
-      "social_url": "https://solodroid.net/demo/your_single_radio/page.html"
+      "social_url": "https://superradio.com.mk/"
     },
 	{
       "social_name": "OhridPress",
