--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     {
       "radio_name": "Super Radio Ohrid 97.00 FM",
       "radio_genre": "29 Godini Ohrid e Super!",
-      "radio_url": "http://eu9.fastcast4u.com/proxy/superradioohrid?mp=/1",
+      "radio_url": "http://stream.zeno.fm/2dmgztdg1c9uv",
       "radio_image_url": "https://i.postimg.cc/qRCbjPCG/300x300.png",
       "background_image_url": "https://i.pinimg.com/originals/9b/2f/cf/9b2fcfc4838dbcbe8b97e2e038789e6b.gif"
     }
