--- a/config.json
+++ b/config.json
@@ -13,7 +13,7 @@
       "onesignal_app_id": "8e37561d-fd2e-4693-9d8c-c29326b3e29d",
       "fcm_notification_topic": "your_single_radio_topic",
       "privacy_policy_url": "https://sites.google.com/view/your-single-radio",
-	  "more_apps_url": "https://play.google.com/store/apps/developer?id=Solodroid"
+	  "more_apps_url": "https://play.google.com/store/apps/developer?id=Angjele"
     }
   ],
   "ads": [
